# family-budget

./: .env.template  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
app/: config.py  crud.py  database.py  dependencies.py  main.py  models.py  schemas.py
app/endpoints/: auth.py  budgets.py  users.py
app/routers/: auth.py  budgets.py  users.py
