[tool.poetry]
name = "family-budget"
version = "0.1.0"
description = ""
authors = ["michaldanielewicz <michaldanielewicz94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
psycopg2 = "^2.9.5"
SQLAlchemy = "^1.4.46"
fastapi-pagination = "^0.11.2"
uvicorn = "^0.20.0"
python-multipart = "^0.0.5"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[tool.poetry.dev-dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
isort = "^5.11.4"
pytest = "^7.2.1"
mypy = "^0.991"
pytest-dotenv = "^0.5.2"

[tool.black]
line-length = 120

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
line_length = 120
multi_line_output = 3
use_parentheses = true

[tool.mypy]
python_version = 3.9
follow_imports = "normal"
ignore_missing_imports = true
strict_optional = true
disallow_untyped_defs = true
exclude = "tests"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
